--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
     "@neondatabase/serverless": "^1.0.2",
     "@prisma/adapter-neon": "^7.3.0",
     "@prisma/adapter-pg": "^7.3.0",
-    "@prisma/client": "^7.3.0",
+    "@prisma/client": "^7.4.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.3",
-    "pg": "^8.17.2",
-    "prisma": "^7.3.0"
+    "pg": "^8.17.2"
   },
   "devDependencies": {
     "@types/pg": "^8.16.0",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "prisma": "^7.4.0"
   }
 }
